@@ -1,6 +1,7 @@
 # what flags you want to pass to the C compiler & linker
+AM_CFLAGS = -I$(srcdir)/..
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libutil.a
-libutil_a_SOURCES = getopt.c getopt.h getopt1.c ssl_writev.c generic_types.h
-
+libutil_a_SOURCES = getopt.c getopt.h getopt1.c ssl_writev.c generic_types.h \
+					queue.c queue.h
